fix alignment

--- a/src/middle-school/sass/sidebar.scss
+++ b/src/middle-school/sass/sidebar.scss
@@ -60,6 +60,7 @@
       transition: all .2s ease-in-out;
       color: #fff;
       background: transparent;
+      text-align:left;
 
       &:hover,
       &:focus,
